2020-05-17 stream整合问题尚未解决

--- a/mq-parent/mq-stream-consumer/src/main/resources/application.properties
+++ b/mq-parent/mq-stream-consumer/src/main/resources/application.properties
@@ -1,1 +1,30 @@
+server.port=8002
+server.servlet.context-path=/consumer
+
+spring.application.name=consumer
+
+#\u8BBE\u7F6E\u7684fault binder
+spring.cloud.stream.default-binder=rabbit
+
+spring.cloud.stream.bindings.input_channel.destination=exchange3
+spring.cloud.stream.bindings.input_channel.group=queue3
+spring.cloud.stream.bindings.input_channel.binder=rabbit
+spring.cloud.stream.bindings.input_channel.consumer.concurrency=1
+spring.cloud.stream.rabbit.bindings.input_channel.consumer.requeue-rejected=false
+spring.cloud.stream.rabbit.bindings.input_channel.consumer.acknowledge-mode=MANUAL
+spring.cloud.stream.rabbit.bindings.input_channel.consumer.recovery-interval=3000
+spring.cloud.stream.rabbit.bindings.input_channel.consumer.durable-subscription=true
+spring.cloud.stream.rabbit.bindings.input_channel.consumer.max-concurrency=5
+
+spring.cloud.stream.binders.rabbit_cluster.type=rabbit
+#spring.cloud.stream.binders.rabbit_cluster.environment.spring.rabbitmq.address=amqp://192.168.43.90
+#spring.cloud.stream.binders.rabbit_cluster.environment.spring.rabbitmq.username=guest
+#spring.cloud.stream.binders.rabbit_cluster.environment.spring.rabbitmq.password=guest
+#spring.cloud.stream.binders.rabbit_cluster.environment.spring.rabbitmq.virtual-host=/
+#rabbit\u7684\u914D\u7F6E\u4FE1\u606F
+spring.rabbitmq.addresses=192.168.43.90
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
 
